Fixing Gardle Bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -38,5 +39,6 @@ dependencies {
     ////OCR
     compile 'com.google.android.gms:play-services:12.0.1'
     compile 'com.google.android.gms:play-services-vision:12.0.1'
+    compile 'com.android.support:multidex:1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
